added latest changes

--- a/about-us.html
+++ b/about-us.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
+ <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
- <meta name="description" content="We provide best of the breed solutions that drive your ecommerce, ebanking or einsurance platforms and we are the pioneers in delivering omni channel experience across a broad spectrum of ecommerce and ebanking in general and the Oracle Commerce/ FCDB suites in particular">
- <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, e-commerce consulting, oracle e commerce, best e-commerce, oracle e commerce platform">
+ <meta name="description" content="We provide best of the breed solutions that drive your ecommerce, ebanking or einsurance platforms and we are the pioneers in delivering omni channel experience across a broad spectrum of ecommerce and ebanking in general">
+ <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, e-commerce consulting, oracle e commerce, best e-commerce, e-commerce platform">
  <meta http-equiv="cache-control" content="max-age=518400">
  <meta http-equiv="pragma" content="public">
  <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -33,7 +33,7 @@
          <a href="digital-commerce-solutions.html"> <img src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Commerce Solutions</a>
         </li>
         <li>
-         <a href="business-process-management.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> Business Process Management (BPM)</a>
+          <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav">  AI/ML Driven Solutions</a>
         </li>
         <li>
          <a href="application-management-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav"> Application Management Services</a>
@@ -78,7 +78,7 @@
       <br>
       <br> We are Partners in Excellence with enterprises seeking to enhance and transform their business models. Our focused investments in solution accelerators and evolving technologies help achieve superior business outcomes. The experience and proven capabilities of our talented team of over 100 professionals enables us to exceed customer expectations.
       <br>
-      <br> Our alliances with acknowledged world leading organizations ensure optimized solutions for our clients. Logixal is a Specialized Oracle Gold Partner. Our consultants are certified for their advanced competency in Oracle Commerce Products Suite (which includes Oracle ATG, Endeca and Web Center Sites), especially Oracle’s Digital Banking Platform.
+      <br> Our alliances with acknowledged world leading organizations ensure optimized solutions for our clients. Our consultants are certified for their advanced competency in Digital Commerce and Digital Banking Platforms.
       <br>
       <br> Our customers, spread across the United States, Europe, Middle East, Africa and Asia, are supported from our Offices in India, UK and the USA. In the last 9 years, we have a 100% track record of successfully extending and implementing product software for various enterprises. Logixal is known to deliver superior total cost of ownership (TCO) in Re-platforming/Upgrades as well as Greenfield implementation projects. </p>
     </div>
@@ -99,7 +99,7 @@
   <div class="container ">
    <h1 class="text-danger text-center font28 mt2 mb3">Our Management Team</h1>
    <div class="row">
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
+    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-4 oracle-logixal visible-640">
      <div class="card"> <img class="card-img-top" src="images\01-DeepakGala.jpg">
       <div class="card-block">
        <h6 class="text-bold  text-blue text-center font17">Deepak Gala</h6>
@@ -108,7 +108,7 @@
       </div>
      </div>
     </div>
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
+    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-4 oracle-logixal visible-640">
      <div class="card"> <img class="card-img-top" src="images\02-Uttam.jpg">
       <div class="card-block">
        <h6 class="text-bold text-blue text-center font17">Uttam Gadkary</h6>
@@ -117,7 +117,7 @@
       </div>
      </div>
     </div>
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
+    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-4 oracle-logixal visible-640">
      <div class="card"> <img class="card-img-top" src="images\03-Gaurav.jpg">
       <div class="card-block">
        <h6 class="text-bold  text-blue text-center font17">Gaurav Deshpande</h6>
@@ -126,7 +126,7 @@
       </div>
      </div>
     </div>
-    <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
+    <!-- <div class=" col-xs-12 col-sm-6 col-md-3 col-lg-3 oracle-logixal visible-640">
      <div class="card"> <img class="card-img-top" src="images\04-Vipul.jpg">
       <div class="card-block">
        <h6 class="text-bold text-blue text-center font17">Vipul Vichhivora</h6>
@@ -134,7 +134,7 @@
        <p class=" text-center text-muted ">vipul.vichhivora@logixal.com</p>
       </div>
      </div>
-    </div>
+    </div> -->
    </div>
   </div>
  </section>
@@ -166,7 +166,7 @@
   </div>
  </section>
  <section class="oracle-partner-Section-border">
-  <div class="container">
+  <!-- <div class="container">
    <h2 class="text-danger text-center font28 mt2 mb3">Our Oracle Partnership</h2>
    <p class="text-center mb3"> We at Logixal, in partnership with Oracle, are focused on helping you achieve excellence no matter where you are along the path. </p>
    <div class="row-fluid">
@@ -188,7 +188,7 @@
      </ul>
     </div>
    </div>
-  </div>
+  </div> -->
  </section>
  <section class="success-stories-logixal oracle-logixal grey hide">
   <div class="container">
@@ -265,7 +265,7 @@
      </div>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 text-right footercustomcolor">
-     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2017. All rights reserved</small> </p>
+     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2022. All rights reserved</small> </p>
     </div>
    </div>
   </div>
