--- a/accelerators-widget.html
+++ b/accelerators-widget.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
+ <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
  <meta name="description" content="An end to end ecommerce and e banking solutions provider that enables your enterprise to operate with industry standards">
- <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, FCDB, OBDX, Digital Banking, Digital Commerce, Mobile Banking, Mobile Applications, Accelerators, e-commerce consulting, oracle e commerce, best e-commerce, oracle e commerce platform">
+ <meta name="keywords" content="Atg, ecommerce websites, b2b ecommerce, FCDB, OBDX, Digital Banking, Digital Commerce, Mobile Banking, Mobile Applications, Accelerators, e-commerce consulting, e-commerce, best e-commerce, oracle e commerce platform">
  <meta http-equiv="cache-control" content="max-age=518400">
  <meta http-equiv="pragma" content="public">
  <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -36,7 +36,7 @@
          <a href="digital-commerce-solutions.html"> <img src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Commerce Solutions</a>
         </li>
         <li>
-         <a href="business-process-management.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> Business Process Management (BPM)</a>
+         <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav">  AI/ML Driven Solutions</a>
         </li>
         <li>
          <a href="application-management-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav"> Application Management Services</a>
@@ -67,7 +67,7 @@
    <div class="row">
     <div class="col-xs-12 col-md-12">
      <h1 class="text-danger margin-bottom font32 mt2 mb3">Digital Banking </h1>
-     <p class="text-center">Logixal is a <b>Specialized Oracle Gold Partner</b> for providing services around Oracle’s Digital Banking Platforms viz. Oracle Banking Digital Experience (OBDX) and the erstwhile Oracle FLEXCUBE Direct Banking (FCDB). Our Digital Banking Practice has demonstrated capability to offer the entire range of Consulting Services, including undertaking customization using the Extensibility tools and providing a variety of training offerings to financial institutions and Oracle partners. In the past years, Logixal has successfully delivered number of Digital Banking projects for leading banks in Europe, Lebanon, Pakistan, Zambia, Bhutan, Mauritius and Seychelles. We are Partners in Excellence with enterprises seeking to enhance and transform their business models. Our focused investments in solution accelerators and evolving technologies help achieve superior business outcomes. The experience and proven capabilities of our talented and certified professionals enables us to exceed customer expectations. </p>
+     <p class="text-center">Logixal is a specialized partner providing services around  Digital Banking Platforms. Our Digital Banking Practice has demonstrated capability to offer the entire range of Consulting Services, including undertaking customization using the Extensibility tools and providing a variety of training offerings to financial institutions. In the past years, Logixal has successfully delivered number of Digital Banking projects for leading banks in Europe, Lebanon, Pakistan, Zambia, Bhutan, Mauritius and Seychelles. We are Partners in Excellence with enterprises seeking to enhance and transform their business models. Our focused investments in solution accelerators and evolving technologies help achieve superior business outcomes. The experience and proven capabilities of our talented and certified professionals enables us to exceed customer expectations. </p>
     </div>
    </div>
   </div>
@@ -77,7 +77,7 @@
    <ul class="icon-gallery col-xs-12">
     <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico lock"><span class="desc">Two-Factor Authentication</span></a></li>
     <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico mobile"><span class="desc">Mobile Banking</span></a></li>
-    <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico oracle"><span class="desc">Integration with Oracle Products</span></a></li>
+    <li class="col-xs-6 col-md-3"><a href="#"><span class="desc">Integration with Products</span></a></li>
     <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico"><span class="desc">Region Specific Packages</span></a></li>
    </ul>
   </div>
@@ -87,7 +87,7 @@
    <div class="row">
     <div class="col-xs-12">
      <h2 class="text-danger margin-bottom font32 mt2 mb3">  Digital Commerce </h2>
-     <p class="text-center"> Logixal is a <b>Specialized Oracle Gold Partner</b> with Oracle for providing services on Oracle Commerce (ATG) and Oracle Commerce Cloud Platform . Our Accelerator solution can reduce the development time and address a very generic business needs. Our bucket of accelerators include Integrations with various Digital Marketing Platform, Payment Gateways & Analytics System. We strive hard to provide best solutions in this rapidly evolving Digital World thereby increasing sales and stay ahead in the Market. </p>
+     <p class="text-center"> Logixal is a specialized partner providing services on varied digital commerce with our inbuilt Accelerator solution which can reduce the development time and address a very generic business needs. Our bucket of accelerators include Integrations with various Digital Marketing Platform, Payment Gateways & Analytics System. We strive hard to provide best solutions in this rapidly evolving Digital World thereby increasing sales and stay ahead in the Market. </p>
     </div>
    </div>
   </div>
@@ -102,6 +102,38 @@
    </div>
   </div>
   <br> </section>
+  <!-- section for DES -->
+ <section class=" text-center" id="DigiBank">
+  <div class="container">
+   <div class="row">
+    <div class="col-xs-12 col-md-12">
+     <h1 class="text-danger margin-bottom font32 mt2 mb3">Digital Engineering Suite </h1>
+     <p class="text-center">Logixal is a <b>Data Engineering Suite (DES)</b> helps to provide solutions with respect to customer retention, better search capability as well automate manual and repetitive tasks. It is a framework which helps in integrating existing applications as well as enhance user experience by using simple but powerful Machine Learning Algorithms running on Industry Standard application software. At the same time, it is also a framework and hence, can be extended to provide for any custom needs.</p>
+    </div>
+   </div>
+  </div>
+ </section>
+ <div class="container">
+  <div class="row">
+   <ul class="icon-gallery_ai col-xs-12">
+    <li class="col-xs-6 col-md-3"><a href="#">
+      <br/> 
+      <img class="des_ai" src = "images/icons_kd/kd_ai.png">
+      <span class="desc">ML Intelligence</span></a></li>
+    <li class="col-xs-6 col-md-3"><a href="#" class="kd-ico commerce"><span class="desc"> Headless Commerce </span></a></li>
+    <li class="col-xs-6 col-md-3"><a href="#">
+      <br/> 
+      <img class="des_ai" src = "images/icons_kd/kd_virtual.png">
+      <span class="desc"> Virtual Assistant</span></a></li>
+    <li class="col-xs-6 col-md-3"><a href="#">
+      <br/> 
+      <img class="des_ai" src = "images/icons_kd/DES_monitoring_icon.png">
+      <span class="desc"> Log Monitoring</span></a>
+    </li>
+   </ul>
+  </div>
+ </div>
+  <!-- Section for DES ends -->
  <div class="copyright">
   <div class="container">
    <div class="row">
@@ -132,7 +164,7 @@
      </div>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 text-right footercustomcolor">
-     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2017. All rights reserved</small> </p>
+     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2022. All rights reserved</small> </p>
     </div>
    </div>
   </div>
