--- a/data-engineering-suite.html
+++ b/data-engineering-suite.html
@@ -36,7 +36,7 @@
          <a href="digital-commerce-solutions.html"> <img src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Commerce Solutions</a>
         </li>
         <li>
-         <a href="business-process-management.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> Business Process Management (BPM)</a>
+         <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> Artificial Intelligence / Machine Learning</a>
         </li>
         <li>
          <a href="application-management-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav"> Application Management Services</a>
@@ -54,24 +54,25 @@
  </header>
  <div id="myCarousel" class="carousel slide-cancel" data-ride="carousel">
   <div class="item ">
-   <a href="index.html#accelerators"> <img src="images/BPM-banner-without-shadow.jpg" class="resize-inner-banner" alt="BPM Banner"> </a>
+   <a href="index.html#accelerators"> <img src="images/DES-banner-without-shadow_2_wt.jpg" class="resize-des-inner-banner" alt="Data Engineering Suite Banner"> </a>
   </div>
  </div>
  <div class="container-fluid">
   <div class="row">
-   <nav class="breadcrumb breadcrumb-bg-color font10"> <a class="breadcrumb-item" href="index.html">Home</a> <a class="breadcrumb-item" href="index.html">Lines of Business </a> <span class="breadcrumb-item active">BPM </span> </nav>
+   <nav class="breadcrumb breadcrumb-bg-color font10"> <a class="breadcrumb-item" href="index.html">Home</a> <a class="breadcrumb-item" href="index.html">Lines of Business </a> <span class="breadcrumb-item active">AI/ML Driven Solutions </span> </nav>
   </div>
  </div>
  <section class="banking-description text-center">
   <div class="container">
    <div class="row">
     <div class="col-xs-12">
-     <h2 class="text-danger font32 mobile-mb mb3 mt2">Business Process Management</h2>
-     <p class="text-center mb3"> Our Business Process Management (BPM) practice provides solutions for <strong class="text-blue">managing and improving business efficiency</strong> through continuous optimization of business processes. We develop and deliver <strong class="text-blue">process-based applications</strong> which automate routine tasks, streamline decision making and remove people and process siloes which are critical to driving growth and scale in today’s businesses.
+     <h2 class="text-danger font32 mobile-mb mb3 mt2">Data Engineering Suite (DES)</h2>
+     <p class="text-center mb3"> Our AI / ML practice provides solutions for <strong class="text-blue">a framework which helps in integrating existing applications</strong> as well as enhance user experience by using simple but powerful Machine Learning Algorithms running on Industry Standard application software. At the same time, it is also a framework and hence, can be extended to provide for any specific needs of the Retailer
       <br>
-      <br> Our BPM solutions deliver <strong class="text-blue">business innovation</strong> and <strong class="text-blue">optimization</strong> through modelling, simulation, developing, deploying and monitoring of organizational processes and <strong class="text-blue">workflows</strong> and integrating them with necessary systems for delivering process automation.
+      <br> Our <strong class="text-blue">AI Powered Search Engine </strong>  with out of the box Digital Commerce Accelerator with Pre-Configured domain specific “fragments”. Ability to plug-in Machine Learning models for advanced analytics and user personalization
       <br>
-      <br> We have delivered complex business processes for the <strong class="text-blue">banking, financial services</strong> and <strong class="text-blue">digital commerce</strong> domains in the areas of origination of <strong class="text-blue">mortgage and bundled products, closure of accounts, multi-level approval workflows, payments, service request management, online banking, commerce applications </strong> etc. across assisted and digital channels. </div>
+<!--       <br> We have delivered complex business processes for the <strong class="text-blue">banking, financial services</strong> and <strong class="text-blue">digital commerce</strong> domains in the areas of origination of <strong class="text-blue">mortgage and bundled products, closure of accounts, multi-level approval workflows, payments, service request management, online banking, commerce applications </strong> etc. across assisted and digital channels.  -->
+    </div>
    </div>
   </div>
  </section>
@@ -79,30 +80,30 @@
   <div class="container">
    <div class="row">
     <h2 class="text-danger text-center font28  mt2 mb3">Our Expertise</h2>
-    <p class="text-center mobile-pm2 mb3">We partner with our customers to provide comprehensive services to support Business Process Management initiatives with a strong focus on value and benefit delivery. We automate existing manual and distributed processes to an efficient process model delivered by leveraging leading technology platforms for implementing BPM like <strong class="text-blue"> Oracle BPM, JBoss BPM </strong> and <strong class="text-blue">Pega</strong> etc. as <strong class="text-blue"><u>on-premise or cloud</u></strong> solutions or developing custom solutions tailored to meet specific point problems.</p>
+    <p class="text-center mobile-pm2 mb3">We partner with our customers to provide comprehensive services to support Machine Learning initiatives with a strong focus on value and benefit delivery. Industry is seeking attention and putting efforts not only to retain existing customers but also constantly get in new customers. Better service can be provided by keeping <strong class="text-blue">track of various touchpoints</strong>. The efficiency of the service industry can also be increased exponentially by <strong class="text-blue">using automation as well increasing ML/AI to process data sources </strong>and then making sense to make calculated decisions at a faster pace. <!-- We automate existing manual and distributed processes to an efficient process model delivered by leveraging leading technology platforms for implementing BPM like <strong class="text-blue"> Oracle BPM, JBoss BPM </strong> and <strong class="text-blue">Pega</strong> etc. as <strong class="text-blue"><u>on-premise or cloud</u></strong> solutions or developing custom solutions tailored to meet specific point problems.</p> -->
     <br>
     <div class="col-xs-12 col-sm-6 col-md-5">
-     <a href="#"><img src="images/our-expertise-bpm.jpg" class="img-responsive center-block"></a>
+     <a href="#"><img src="images/DES_expertise.png" class="img-responsive center-block"></a>
      <br>
      <br> </div>
     <div class="col-xs-12 col-sm-6 col-md-7 margin-bottom">
-     <p class="text-blue font19">We have contributed from strategy, consulting and advisory, architecture and solutioning to implementation of BPM technology platforms:</p>
+     <p class="text-blue font19"><br/><br/>We have contributed from strategy, consulting and advisory, architecture and solutioning to implementation of Machine Learning:</p>
      <br>
      <ul class="list-unstyled bullet-blue mobile-pm2">
       <li>
-       <p> BPM Strategy and Business Process Review</p>
+       <p> Discover customer needs</p>
       </li>
       <li>
-       <p> BPM Technology and Platform Evaluation and Selection</p>
+       <p> Analyze business requirements</p>
       </li>
       <li>
-       <p> Process and Solution Architecture</p>
+       <p> Formulate strategy </p>
       </li>
       <li>
-       <p> Process Modelling and Design</p>
+       <p> Learn from patterns and trends</p>
       </li>
       <li>
-       <p> Technology implementations for BPM Platforms and development of enterprise workflows</p>
+       <p> Deliver Value to business </p>
       </li>
      </ul>
     </div>
@@ -114,17 +115,17 @@
    <h2 class="text-danger text-center font28 mb3 mt2 mobile-mb">Solutions and Technology Delivery</h2>
    <p class="text-center mobile-pm2  ">We design, develop and deliver end-to-end technology solutions for BPM initiatives driven by strong experience of delivering workflow based automation for enterprise processes across all digital and human assisted channels, to deliver a seamless customer experience and business growth. </p>
    <p class="text-center mobile-pm2  mobile-mb mb3"> Workflow | Business Rules | Assignments | Task Routing| Process Tracking | Analytics | Business Activity Monitoring</p>
-   <div class="col-xs-12 col-sm-6 col-sm-push-6 col-md-6 col-md-push-6"> <img src="images/benifits-bpm.png" class="img-responsive center-block margin-bottom border-img" alt=""> </div>
+   <div class="col-xs-12 col-sm-6 col-sm-push-6 col-md-6 col-md-push-6"> <img src="images/DES_delivery.png" class="img-responsive center-block margin-bottom border-img" alt=""> </div>
    <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-md-6 col-md-pull-6 row-bpm">
-    <p class="text-blue font21">Our technology delivery capabilities encompass the following benefits to our customers driving success of their BPM initiatives: </p>
+    <p class="text-blue font21">Our technology delivery capabilities encompass the following benefits to our customers driving success of their AI/ML initiatives: </p>
     <ul class="list-unstyled font14 padding0 bullet-blue">
-     <li class=" padding0 oracle-logixal">Establishment of common business terminology and generic industry standard common repository between the business stakeholders across departments and IT thereby resulting in continuous process improvement. </li>
-     <li class=" padding0 oracle-logixal"> Processes defined and implemented once can be integrated across multiple channels defined in the interaction experience.
+     <li class=" padding0 oracle-logixal">In-built ability to learn and understand user behaviour which results in Increase Relevancy and Better User Recommendations. </li>
+     <li class=" padding0 oracle-logixal">Not just a “tool” but a “framework”. Works on its own data model thereby making it flexible to integrate with any business application.
       <br>
-      <p class="text-muted"> <em>E.g. Origination process for mortgages can be triggered from customer direct access channel and continued and completed from indirect channel like branch.</em></p>
+      <!-- <p class="text-muted">Incorporate Business Rules for Maximum User Experience  using the “framework” experience manager for customizing  menu, layouts and banners.</p> -->
      </li>
-     <li class=" padding0 oracle-logixal">Promotes reuse of best practices and ensures consistency in process initiatives across the organization.</li>
-     <li class=" padding0">Standardization of operations across multiple business units thereby improving operational efficiency and reduced IT complexity.</li>
+     <li class=" padding0 oracle-logixal">Ability to Modify , Configure, Enhance and add Plugin ML Models in the Search Experienc.</li>
+     <li class=" padding0">Ready upload adapters to import data information from File System, RDBMS.</li>
     </ul>
    </div>
   </div>
