--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
- <title>Logixal Inc | Your trusted Oracle Omni channel experience specialist and Oracle specialist partner</title>
+ <title>Logixal Inc</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
  <meta name="description" content="The Case studies reflect our deep knowledge and and passion for the solutions we deliver combined with the rich features set and out of the box functionalities offered based on changing client needs.">
  <meta http-equiv="cache-control" content="max-age=518400">
@@ -35,7 +35,7 @@
          <a href="digital-commerce-solutions.html"> <img src="images/Dropdown-list/01b-lineofbusiness.png" class="custom-image-dropdown-nav"> Digital Commerce Solutions</a>
         </li>
         <li>
-         <a href="business-process-management.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav"> Business Process Management (BPM)</a>
+        <a href="data-engineering-suite.html"> <img src="images/Dropdown-list/01c-lineofbusiness.png" class="custom-image-dropdown-nav">AI/ML Driven Solutions</a> 
         </li>
         <li>
          <a href="application-management-services.html"> <img src="images/Dropdown-list/01d-lineofbusiness.png" class="custom-image-dropdown-nav"> Application Management Services</a>
@@ -72,7 +72,7 @@
  </section>
  <br>
  <section id="contentOne">
-  <div class="container">
+  <!-- <div class="container">
    <div class="row topBuffer" id="oracleCom">
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
      <a href="pdf/case-study-3.pdf" target="_blank"><img src="pdf/case-study-3.jpg" class="img-responsive center-block" alt="Oracle Web Commerce Platform Upgrade"></a>
@@ -91,7 +91,7 @@
      <p>An online retail chain was grappling with an unstable eCommerce platform which was impacting their sales. Implementation of the robust online ATG eCommerce platform ran into rough weather leaving the client with only a couple of months before the holiday season ....</p>
     </div>
    </div>
-  </div>
+  </div> -->
  </section>
  <hr>
  <div class="copyright">
@@ -124,7 +124,7 @@
      </div>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 text-right footercustomcolor">
-     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2017. All rights reserved</small> </p>
+     <p class="text-center font12"> <small>Logixal Solutions - Copyright &copy; 2022. All rights reserved</small> </p>
     </div>
    </div>
   </div>
