--- a/ui-ux-services.html
+++ b/ui-ux-services.html
@@ -81,8 +81,8 @@
    <div class="container-fluid">
       <div class="row">
          <nav class="breadcrumb breadcrumb-bg-color font10"> <a class="breadcrumb-item" href="index.html">Home</a> <a
-               class="breadcrumb-item" href="index.html">Lines of Business </a> <span
-               class="breadcrumb-item active">Digital Banking Solutions </span> </nav>
+               class="breadcrumb-item" href="index.html">Lines of Business </a> <span class="breadcrumb-item active">UI
+               / UX Services </span> </nav>
       </div>
    </div>
    <section class="banking-description text-center">
