--- a/ui-ux-services.html
+++ b/ui-ux-services.html
@@ -153,7 +153,7 @@
             </div>
             <div class="col-md-6 col-sm-12">
                <div class="ors-wrapper ors4">
-                  <p class="">Useability Testing</p>
+                  <p class="">Usability Testing</p>
                </div>
             </div>
             <!-- <div class="col-md-6 col-sm-12">
